tests/baselines/reference/enumConflictsWithGlobalIdentifier.errors.txt
enumConflictsWithGlobalIdentifier.ts(4,9): error TS2304: Cannot find name 'IgnoreRulesSpecific'.
enumConflictsWithGlobalIdentifier.ts(4,29): error TS1003: Identifier expected.


==== enumConflictsWithGlobalIdentifier.ts (2 errors) ====
    enum Position { 
        IgnoreRulesSpecific = 0,
    }
    var x = IgnoreRulesSpecific.
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
                                
!!! error TS1003: Identifier expected.
    var y = Position.IgnoreRulesSpecific;
    